[tool.poetry]
name = "ms2pip"
version = "3.11.0"
description = "MS²PIP: MS² Peak Intensity Prediction"
authors = ["Sven Degroeve", "Ralf Gabriels", "Kevin Velghe", "Ana Sílvia C. Silva", "Arthur Declercq"]

[build-system]
requires = ["setuptools", "cython", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "^3.7"
biopython = ">=1.74,<2"
numpy = ">=1.16,<2"
pandas = ">=1,<2"
pyteomics = ">=3.5,<5"
tqdm = ">=4,<5"
tables = ">=3.4"
tomlkit = ">=0.5.11,<1"
sqlalchemy = "^1.3.13"
psycopg2 = "^2.8.4"
deeplc = "^0.1.14"
xgboost = "^1.3"
matplotlib = "^3.0"
spectrum_utils = "^0.3.5"
click = ">=7,<9"
lxml = "^4"
rich = ">=13"
pydantic = ">=1.10,<2"

[tool.poetry.dev-dependencies]
cython = "*"
pytest = "*"

[tool.black]
line-length = 88
target-version = ['py37']
