[project]
name = "ms2pip"
version = "4.0.0-dev0"
description = "MS2PIP: Accurate and versatile peptide fragmentation spectrum prediction."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "MS2PIP",
    "proteomics",
    "peptide fragmentation",
    "peak intensity prediction",
    "spectrum prediction",
    "machine learning",
    "spectral library",
    "fasta2speclib",
]
authors = [
    {name = "Ralf Gabriels", email = "ralf@gabriels.dev"},
    {name = "Sven Degroeve", email = "sven.degroeve@ugent.be"},
    {name = "Arthur Declercq", email = "arthur.declercq@ugent.be"},
    {name = "Kevin Velghe", email = "kevin.velghe@ugent.be"},
    {name = "Ana Sílvia C. Silva"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.16,<2",
    "pandas>=1,<2",
    "pyteomics>=3.5,<5",
    "tables>=3.4",
    "tomlkit>=0.5,<1",
    "sqlalchemy>=1.3,<2",
    "click>=7,<9",
    "xgboost>=1.3,<2",
    "lxml>=4",
    "rich>=13",
    "pydantic>=1.10,<2",
    "psm_utils>=0.2.0",
    "werkzeug>=2",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.0",
    "spectrum-utils>=0.4",
]
dev = [
    "black",
    "isort>5",
    "pytest",
]
docs = [
    "sphinx",
    "numpydoc>=1,<2",
    "recommonmark",
    "toml",
    "semver>=2",
    "sphinx_rtd_theme",
    "sphinx-autobuild",
    "sphinx-automodapi",
    "sphinx-click",
]

[project.urls]
documentation = "http://compomics.github.io/projects/ms2pip_c"
source = "https://github.com/compomics/ms2pip_c"
tracker = "https://github.com/compomics/ms2pip_c/issues"
webserver = "https://iomics.ugent.be/ms2pip/"
publication = "https://doi.org/10.1093/nar/gkz299/"

[project.scripts]
ms2pip = "ms2pip.__main__:main"
ms2pip-single-prediction = "ms2pip._utils.single_prediction:_main"

[build-system]
requires = ["setuptools", "cython", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ms2pip*"]

[tool.black]
line-length = 99
target-version = ['py38']

[tool.isort]
profile = "black"
