[project]
name = "ms2pip"
description = "MS2PIP: Accurate and versatile peptide fragmentation spectrum prediction."
readme = "README.rst"
license = { file = "LICENSE" }
dynamic = ["version"]
keywords = [
    "MS2PIP",
    "proteomics",
    "peptide fragmentation",
    "peak intensity prediction",
    "spectrum prediction",
    "machine learning",
    "spectral library",
    "fasta2speclib",
]
authors = [
    { name = "Ralf Gabriels", email = "ralf@gabriels.dev" },
    { name = "Sven Degroeve", email = "sven.degroeve@ugent.be" },
    { name = "Arthur Declercq", email = "arthur.declercq@ugent.be" },
    { name = "Kevin Velghe", email = "kevin.velghe@ugent.be" },
    { name = "Ana Sílvia C. Silva" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.16,<2",
    "pandas>=1,<2",
    "pyarrow",
    "pyteomics>=3.5,<5",
    "tomlkit>=0.5,<1",
    "sqlalchemy>=1.3,<2",
    "click>=7,<9",
    "xgboost>=1.3,<2",
    "lxml>=4",
    "rich>=13",
    "pydantic>=1.10,<2",
    "psm_utils>=0.2.0",
    "werkzeug>=2",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.0", "spectrum-utils>=0.4"]
dev = ["black", "isort>5", "pytest"]
docs = [
    "sphinx",
    "numpydoc>=1,<2",
    "recommonmark",
    "toml",
    "semver>=2",
    "sphinx_rtd_theme",
    "sphinx-autobuild",
    "sphinx-automodapi",
    "sphinx-click",
]

[project.urls]
documentation = "http://compomics.github.io/projects/ms2pip"
source = "https://github.com/compomics/ms2pip"
tracker = "https://github.com/compomics/ms2pip/issues"
webserver = "https://iomics.ugent.be/ms2pip/"
publication = "https://doi.org/10.1093/nar/gkad335/"

[project.scripts]
ms2pip = "ms2pip.__main__:main"

[build-system]
requires = ["setuptools", "cython", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ms2pip*"]

[tool.black]
line-length = 99
target-version = ['py38']

[tool.ruff]
line-length = 99
target-version = 'py38'

[tool.cibuildwheel]
build = "cp3*-manylinux_x86_64 cp3*-win_amd64 cp3*-macosx_x86_64"
skip = "cp36-* cp37-* cp312-*"                                    # EOL / no Numpy wheels available yet for Python 3.12
manylinux-x86_64-image = "manylinux2014"
# test-command = "pytest {package}/tests"
test-command = "ms2pip --help"

[tool.cibuildwheel.macos]
before-all = "brew install libomp"
